Add a configure option for lto

--- a/config/Makefile.mingw
+++ b/config/Makefile.mingw
@@ -102,6 +102,7 @@ ENABLE_CALL_COUNTS=false
 WITH_PROFINFO=false
 LIBUNWIND_AVAILABLE=false
 LIBUNWIND_LINK_FLAGS=
+LTO=false
 PROFINFO_WIDTH=0
 FORCE_SAFE_STRING=false
 DEFAULT_SAFE_STRING=true
