Add support for RISC-V cross compilation

--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -229,6 +229,7 @@ AFL_INSTRUMENT=@afl@
 MAX_TESTSUITE_DIR_RETRIES=@max_testsuite_dir_retries@
 FLAT_FLOAT_ARRAY=@flat_float_array@
 AWK=@AWK@
+LTO=@lto@
 
 
 ### Native command to build ocamlrun.exe
